  * Better error message when trying to use a git remote that has annex.ignore
    set.
  * Fix bug that caused typechanged symlinks to be assumed to be unlocked
    files, so they were added to the annex by the pre-commit hook.
  * Debian: Run the builtin test suite as an autopkgtest.
  * Debian: Recommend ssh-askpass, which ssh will use when the assistant
    is run w/o a tty. Closes: #719832

 -- Joey Hess <joeyh@debian.org>  Tue, 27 Aug 2013 11:03:00 -0400

git-annex (4.20130815) unstable; urgency=low

  * assistant, watcher: .gitignore files and other git ignores are now
    honored, when git 1.8.4 or newer is installed.
    (Thanks, Adam Spiers, for getting the necessary support into git for this.)
  * importfeed: Ignores transient problems with feeds. Only exits nonzero
    when a feed has repeatedly had a problems for at least 1 day.
  * importfeed: Fix handling of dots in extensions.
  * Windows: Added support for encrypted special remotes.
  * Windows: Fixed permissions problem that prevented removing files
    from directory special remote. Directory special remotes now fully usable.

 -- Joey Hess <joeyh@debian.org>  Thu, 15 Aug 2013 10:14:33 +0200

git-annex (4.20130802) unstable; urgency=low

  * dropunused behavior change: Now refuses to drop the last copy of a
    file, unless you use the --force.
    This was the last place in git-annex that could remove data referred
    to by the git history, without being forced.
    Like drop, dropunused checks remotes, and honors the global
    annex.numcopies setting. (However, .gitattributes settings cannot
    apply to unused files.) 
  * Fix inverted logic in last release's fix for data loss bug,
    that caused git-annex sync on FAT or other crippled filesystems to add
    symlink standin files to the annex.
  * importfeed can be used to import files from podcast feeds.
  * webapp: When setting up a dedicated ssh key to access the annex