@@ -25,6 +25,8 @@ git-annex (4.20130827) unstable; urgency=low
   * Debian: Run the builtin test suite as an autopkgtest.
   * Debian: Recommend ssh-askpass, which ssh will use when the assistant
     is run w/o a tty. Closes: #719832
+  * Honor core.sharedrepository when receiving and adding files in direct
+    mode.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 27 Aug 2013 11:03:00 -0400
 
